# crm-workroom

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.planning/: 1-CONTEXT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-access-roles-and-workspace-trust-boundary-week-1-2/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/config/: settings.py
backend/app/db/: session.py
backend/app/features/auth/: __init__.py  models.py  routes.py  schemas.py  security.py  service.py  telegram_client.py
backend/app/features/calendar/: __init__.py  routes.py  services.py
backend/app/features/employees/: __init__.py  routes.py  services.py
backend/app/features/health/: routes.py
backend/app/features/profile/: __init__.py  routes.py  services.py
backend/app/features/shared/: dependencies.py  domain_support.py  models.py  schemas.py
backend/app/features/telegram/: __init__.py  bot.py  routes.py  runtime.py  service.py  storage.py
backend/app/features/vacations/: __init__.py  routes.py  services.py
backend/tests/: conftest.py
backend/tests/integration/auth/: test_invitation_flow.py  test_session_flow.py
services/api-gateway/: nginx.conf
services/auth-service/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
services/auth-service/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py  service.py  telegram_client.py
services/auth-service/app/routers/: auth.py  health.py
services/auth-service/migrations/: env.py
services/auth-service/migrations/versions/: 0001_initial_auth_schema.py
services/auth-service/tests/: test_http_smoke.py
services/people-service/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
services/people-service/app/: config.py  database.py  main.py  models.py  schemas.py  service.py
services/telegram-integration-service/: .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/telegram-integration-service/app/: bot.py  config.py  domain.py  main.py  service.py  storage.py
services/telegram-integration-service/tests/: test_http_smoke.py
web/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json
(+73 files in other folders)
